--- a/fr/.other_paragraphes.md
+++ b/fr/.other_paragraphes.md
@@ -1,4 +1,6 @@
-
+<!--
+Dieu à fait le corps de la femme pour accoucher.
+-->
 
 <!-- 
 ## 3ème accouchment à l'hopital 
@@ -27,7 +29,25 @@ Il y a quand même quelques différences qui nous ont l'impression que ça simpl
 
 -->
 
+<!--
+Nous avons faites notre première et deuxième accouchment dans une maison de naissance et un troisième à l'hopital. 
+Ce qui nous permet de comparer les deux. 
 
+
+On préfère nettement l'accouchement à la maisons de naissance que à l'hôpital.
+Apparemment ce un sentiment partagé par d'autre parents qui on fait aussi les deux, accouchement à l'hopital et un accouchement à la maison/ maison de naissance^[
+    https://www.womenandbirth.org/article/S1871-5192(23)00035-5/fulltext
+].
+Mais il faut aussi dire que les parents qui choisissent un accouchement dans une maison de naissance sont des parents particulier et ça ce ne généralise pas forcement  à tout les parents. 
+
+On attend avec impatience une étude qui compare les accouchement dans les hôpitaux avec les accouchement dans les maisons de naissance en Suisse romande.
+L'étude devrait comparer des femmes similaires au niveau de l'age et de nombre d'enfants avec des accouchements a bas-risque entre les deux lieu de naissance.
+
+Entre temps j'ai déjà regardé des études publiées dans d'autre pays. 
+Une étude qui montre 30% moins de cesariens et moin de ^[
+    https://doi.org/10.1097/aog.0000000000003521]
+
+-->
 
 
 
